# okx-onchainos-contest-bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: base_token_universe.json
docs/: FLOW.md  STRATEGY.md  SUBMISSION.md
scripts/: refresh_universe.sh  run_live.sh
src/okx_contest_bot/: analytics.py  config.py  engine.py  main.py  okx_client.py  risk.py  selector.py  strategy.py  universe_refresh.py
src/okx_onchainos_contest_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
